# xmux

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  PROGRESS.md  README.ko.md  README.md
.github/workflows/: ci.yml
.superpowers/sdd/: task-3-report.md
cmd/xmux/: doctor.go  env.go  home.go
docs/: AGENTS.md  keybind.md  requirements.md
docs/adr/: 0001-working-notes-coverage.md  0002-english-public-documentation.md  0003-exclude-superpowers-docs-from-public-surface.md  AGENTS.md
docs/solutions/architecture-patterns/: cockpit-cross-host-switch.md  render-first-streaming-scan.md
docs/solutions/runtime-errors/: blocking-io-on-current-thread-runtime-freezes-ui.md  held-stdout-lock-deadlocks-cross-thread-draw.md
docs/solutions/tooling-decisions/: rust-tui-ipc-port-gotchas.md
docs/solutions/ui-bugs/: tree-context-menu-action-in-mux-focus-quits-cockpit.md  tui-preview-self-capture-recursive-mirror.md
docs/solutions/workflow-issues/: background-subagents-cannot-sendmessage-recover-from-transcript.md
docs/superpowers/: AGENTS.md
docs/superpowers/plans/: 2026-06-17-seamless-cross-host-switch.md  2026-06-18-pty-proxy-track1.md  2026-06-19-control-mode-rearchitecture.md  2026-06-19-live-attach-terminal-view.md  2026-06-20-pty-attach-display-rearch.md  2026-06-22-keybinding-ux-overhaul.md  2026-06-22-rapid-nav-freeze-stabilization.md  2026-06-23-hide-tree-on-focus.md  2026-06-24-popup-unification.md  2026-06-24-tree-right-click-context-menu.md  AGENTS.md  (+9 more)
internal/attach/: attach.go  attach_test.go  switch.go  switch_test.go
internal/config/: sshconfig.go
internal/control/: server_test.go
internal/discovery/: discovery.go  discovery_test.go
internal/manage/: manage.go  manage_test.go  preview_test.go
internal/mux/: command.go  parse.go  parse_test.go  target_test.go
internal/session/: session.go
internal/source/: classify.go  runner.go  source_test.go
internal/ui/: behavior_test.go  fixes_test.go  harness_test.go  highlight_test.go  switcher.go
legacy-go/: AGENTS.md  go.mod  go.sum
legacy-go/cmd/: AGENTS.md
legacy-go/internal/: AGENTS.md
src/: AGENTS.md  attach.rs  cli.rs  cockpit.rs  config.rs  control.rs  discovery.rs  display.rs  driver.rs  env.rs  host.rs  jump.rs  lib.rs  logging.rs  main.rs  manage.rs  mux.rs  prefs.rs  session.rs  source.rs  state.rs
src/app/: AGENTS.md  cockpit.rs  focus.rs  input.rs  mod.rs  runtime.rs
src/backend/: AGENTS.md  control.rs  mod.rs
src/display/: AGENTS.md  attachment.rs  decode.rs  dispatch.rs  grid.rs  input.rs  mod.rs  registry.rs  term.rs  worker.rs
src/host/: AGENTS.md  client.rs  inventory.rs  manager.rs  mod.rs  poll.rs  reader.rs  writer.rs
src/machine/: AGENTS.md  local.rs  mod.rs  ssh.rs  vocab.rs
src/model/: AGENTS.md  action.rs  death.rs  host.rs  hosts.rs  mod.rs  mux.rs  operation.rs  plan.rs  selection.rs  server_model.rs  transport.rs
src/mux/: AGENTS.md  control.rs  mod.rs  vocab.rs
src/proxy/: AGENTS.md  app.rs  control_proto.rs  decode.rs  dispatch.rs  input.rs  mod.rs  mouse.rs  registry.rs  run.rs  screen.rs  term.rs
src/state/: AGENTS.md  mod.rs
src/ui/: AGENTS.md  ansi.rs  chrome.rs  mod.rs  modal.rs  ops.rs  run.rs  status.rs  switcher.rs  tree.rs
(+69 files in other folders)
