[package]
name = "xmux"
version = "0.1.0"
edition = "2021"
description = "Cross-environment tmux/psmux session switcher"
license = "MIT"

[[bin]]
name = "xmux"
path = "src/main.rs"

[lib]
name = "xmux"
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
# Unwind (the default), NOT abort: the TUI relies on RAII Drop (TerminalGuard,
# ControlHandle) running during a panic to restore the terminal and remove the
# control socket. `panic = "abort"` would skip those and leave a wrecked terminal.
strip = true

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"
interprocess = { version = "2.4.2", features = ["tokio"] }
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_ignored = "0.1.14"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "process", "time", "io-util", "net", "sync", "fs"] }
toml = "1.1.2"
vt100 = "0.16"
portable-pty = "0.9"
